# jHElib

./: BinaryApiTest.java  CMakeLists.txt  HelibJNIApi.h  HelibJNIApi.java  README.md  TestHelibJNI.java  compilejnilib.sh  helibwrapper.cpp  runTest.sh
jnr/: CMakeLists.txt  Context.cpp  compile1.sh  compile2.sh  pom.xml
jnr/src/main/java/org/homobit/jHElib/: Context.java
